update logo, footer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>TWICE</title>
+        <title>WILOVESTUDIO</title>
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -19,27 +19,33 @@
         <div class="wrapper">
             <div class="header">
                 <div class="subheader">
-                    <div class="col-11">
-                        <h1>WILSTUDIO</h1>
+                    <div class="col-1">
+                        <img src="./image/DZFX.png" alt="">
+                    </div>
+                    <div class="col-10">
+                        <h1 style="padding-top: 5px;">WILSTUDIO</h1>
                     </div>
                     <div class="col-1">
-                        <a style="padding-top: 5px;">Vietnamese</a>
+                        <a style="padding-top: 10px;">Vietnamese</a>
                     </div>
                 </div>
-                <div class="subheader">
-                    <div class="col-1.5">
-                        <p style="padding-right: 5px;">HOME</p>
+                <div class="subheader" style="padding-left: 15px;">
+                    <div class="col-0.5">
+                        <p>HOME</p>
                     </div>
                     <div class="col-3">
-                        <p>NEW ARRIVALS</p>
+                        <p style="text-align: center;">NEW ARRIVALS</p>
                     </div>
-                    <div class="col-4.5">
-                        <p>COTHINGS ACCESSORIES</p>
+                    <div class="col-2.5">
+                        <p>CLOTHINGS</p>
                     </div>
-                    <div class="col-1.5">
-                        <p style="font-weight: bolder; padding-left: 5px;">GIFT</p>
+                    <div class="col-3">
+                        <p>ACCESSORIES</p>
                     </div>
                     <div class="col-1">
+                        <p style="font-weight: bolder; padding-left: 5px;">GIFT</p>
+                    </div>
+                    <div class="col-2">
                         <p>SALE</p>
                     </div>
                 </div>
@@ -56,10 +62,9 @@
         <div class="wrapper">
             <div class="footer">
                 <div class="row">
-                    <p>About us</p>
-                    <p>TEL> 0804 2211 2910</p>
-                    <p>wilove@gmail.com</p>
-                    <p>WILOVESTUDIO.com.wil</p>
+                    <a>TEL> 0804 2211 2910</a>
+                    <a>wilove@gmail.com</a>
+                    <a>WILOVESTUDIO.com.wil</a>
                 </div>
                 <div class="row">
                     <img src="./image/facebook.png"/>
