--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <a>wilove@gmail.com</a>
                     <a>WILOVESTUDIO.com.wil</a>
                 </div>
-                <div class="row">
+                <div class="row" style="margin-left: 55px;">
                     <img src="./image/facebook.png"/>
                     <img src="./image/twitter.png" alt="">
                     <img src="./image/instagram.png" alt="">
