--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
         <div class="wrapper">
             <div class="header">
                 <div class="subheader">
-                    <div class="col-1">
+                    <div class="logo">
                         <img src="./image/DZFX.png" alt="">
                     </div>
-                    <div class="col-10">
-                        <h1 style="padding-top: 5px;">WILSTUDIO</h1>
+                    <div class="info">
+                        <div class="name">
+                            <h1>WILSTUDIO</h1>
+                        </div> 
+                        
                     </div>
-                    <div class="col-1">
-                        <a style="padding-top: 10px;">Vietnamese</a>
+                    <div class="language">
+                        <a>Vietnamese</a>
                     </div>
                 </div>
                 <div class="subheader" style="padding-left: 15px;">
