--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 
                 </div>
                 <div class="row2">
-                    <img src="./image/facebook.png" />
-                    <img src="./image/twitter.png" alt="">
-                    <img src="./image/instagram.png" alt="">
-                    <img src="./image/tiktok.png" alt="">
+                    <img src="./image/pfacebook.png" />
+                    <img src="./image/ptwitter.png" alt="">
+                    <img src="./image/pinstagram.png" alt="">
+                    <img src="./image/ptiktok.png" alt="">
                 </div>
             </div>
         </div>
