--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <div class="wrapper">
             <div class="banner">
                 <img src="./image/banner.jpg">
+                <img src="./image/item.jpg">
             </div>
         </div>
 
